Implemented a CSS class for borderless table

--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -8,15 +8,16 @@
 
 .red {
 	background-color:#ff3600;
-	border-color:gray;
 }
 
 .green {
 	background-color:#c0ff00;
-	border-color:gray;
 }
 
 .blue {
 	background-color:#00a8ff;
-	border-color:gray;
+}
+
+.table-borderless td, .table-borderless th, .table-borderless tr {
+    border: 0 !important
 }
