Added custom CSS for help button

--- a/rpg/rpg.css
+++ b/rpg/rpg.css
@@ -21,3 +21,9 @@
 .table-borderless td, .table-borderless th, .table-borderless tr {
     border: 0 !important
 }
+
+.btn-help{
+  bottom: 15px;
+  float: right;
+  top: 15px;
+}
