--- a/direct-manipulation/boxes-touch.css
+++ b/direct-manipulation/boxes-touch.css
@@ -16,3 +16,9 @@
     -moz-box-shadow: 0px 0px 6px #88F;
     -webkit-box-shadow: 0px 0px 6px #88F;
 }
+
+.creation-highlight {
+    box-shadow: 0px 0px 6px #0C0;
+    -moz-box-shadow: 0px 0px 6px #0C0;
+    -webkit-box-shadow: 0px 0px 6px #0C0;
+}
