--- a/direct-manipulation/boxes-touch.css
+++ b/direct-manipulation/boxes-touch.css
@@ -11,18 +11,21 @@
     position: absolute;
 }
 
+/* Highlighting when moving a box. */
 .box-highlight {
     box-shadow: 0px 0px 6px #88F;
     -moz-box-shadow: 0px 0px 6px #88F;
     -webkit-box-shadow: 0px 0px 6px #88F;
 }
 
+/* Creation highlighting for boxes. */
 .creation-highlight {
     box-shadow: 0px 0px 6px #0C0;
     -moz-box-shadow: 0px 0px 6px #0C0;
     -webkit-box-shadow: 0px 0px 6px #0C0;
 }
 
+/* Deletion highlighting for boxes. */
 .deletion-highlight {
     box-shadow: 0px 0px 6px #FF0000;
     -moz-box-shadow: 0px 0px 6px #FF0000;
