--- a/direct-manipulation/boxes-touch.css
+++ b/direct-manipulation/boxes-touch.css
@@ -27,6 +27,7 @@
 
 /* Deletion highlighting for boxes. */
 .deletion-highlight {
+	border: solid red;
     box-shadow: 0px 0px 6px #FF0000;
     -moz-box-shadow: 0px 0px 6px #FF0000;
     -webkit-box-shadow: 0px 0px 6px #FF0000;
