Tweaked CSS, added in margin for glyphicon

--- a/widget-from-scratch/character-live-edit.css
+++ b/widget-from-scratch/character-live-edit.css
@@ -11,6 +11,10 @@
     bottom: 0;
 }
 
+span.character-live-edit.glyphicon.glyphicon-edit {
+    margin-left: 0.5ex;
+}
+
 .character-editor-overlay > input, .character-editor-overlay > textarea {
     position: absolute;
 }
