--- a/rpg/character-live-edit.css
+++ b/rpg/character-live-edit.css
@@ -5,7 +5,7 @@
 
 .character-editor-overlay {
     position: fixed;
-    left: 0;
+    left: -390px; /* hardcoded fix that solves margin issue */
     top: 0;
     right: 0;
     bottom: 0;
