Cleanred up CSS, added comments, and having difficulty solving overlay issue without -390px left

--- a/rpg/character-live-edit.css
+++ b/rpg/character-live-edit.css
@@ -1,18 +1,13 @@
-.character-editor > i {
-    margin-left: 5px;
-    vertical-align: middle;
-}
-
 .character-editor-overlay {
     position: fixed;
-    left: -390px; /* hardcoded fix that solves margin issue */
+    left: -390px; /*-390px, hardcoded fix that solves margin issue */
     top: 0;
     right: 0;
     bottom: 0;
 }
 
 span.character-live-edit.glyphicon.glyphicon-edit {
-    margin-left: 0.5ex;
+    margin-left: 0.5ex; /* used to give space between glyph and current input */
 }
 
 .character-editor-overlay > input, .character-editor-overlay > textarea {
